doc: update feature list
기능 목록에 기능을 추가했습니다.